--- a/Applications/Rss/Reader/App.config
+++ b/Applications/Rss/Reader/App.config
@@ -19,7 +19,7 @@
     </appender>
 
     <root>
-      <level value="ALL" />
+      <level value="Info" />
       <appender-ref ref="DefaultAppender" />
     </root>
   </log4net>
