--- a/Applications/Rss/Reader/App.config
+++ b/Applications/Rss/Reader/App.config
@@ -21,6 +21,9 @@
     <root>
       <level value="Info" />
       <appender-ref ref="DefaultAppender" />
+      <level value="Count" />
+      <appender-ref ref="File" />
+    
     </root>
   </log4net>
 
