--- a/Applications/Rss/Reader/App.config
+++ b/Applications/Rss/Reader/App.config
@@ -19,10 +19,9 @@
     </appender>
 
     <root>
-      <level value="Info" />
+      <level value="ALL" />
       <appender-ref ref="DefaultAppender" />
-      <level value="Count" />
-      <appender-ref ref="File" />
+      
     
     </root>
   </log4net>
