Fix to log for research.

--- a/Applications/Rss/Reader/App.config
+++ b/Applications/Rss/Reader/App.config
@@ -18,11 +18,21 @@
       </layout>
     </appender>
 
+    <appender name="ResearchAppender" type="log4net.Appender.FileAppender">
+      <param name="File" value="${LOCALAPPDATA}\CubeSoft\CubeRssReader\Log\Research.csv" />
+      <param name="Encoding" value="UTF-8" />
+      <param name="AppendToFile" value="True" />
+      <threshold value="ERROR" />
+
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%message%n" />
+      </layout>
+    </appender>
+
     <root>
       <level value="ALL" />
       <appender-ref ref="DefaultAppender" />
-      
-    
+      <appender-ref ref="ResearchAppender" />
     </root>
   </log4net>
 
